# struphy

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  C2_polar_splines.ipynb  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Convergence_Analysis.ipynb  Cprofile_analyser.py  ECHO_firstTest.ipynb  ECHO_firstTest.py  FEEC_C2_polar_splines.ipynb  FEEC_basics.ipynb  FEEC_linear_mhd.ipynb  FEEC_polar_domain.ipynb  FEEC_polar_domain_NEW3D.ipynb  HOWTO_compute_discrete_derivatives.ipynb  HOWTO_solve_Vlasov_Ampere_1D.ipynb  HOWTO_use_commuting_projectors.ipynb  HOWTO_use_mappings.ipynb  HOWTO_use_module_bsplines.ipynb  HOWTO_use_yaml_input_files.ipynb  Instructions.odt  LICENSE  Magnetic_field_evo.ipynb  Makefile  Maxwell.ipynb  Meeting_07_04_2020.ipynb  Meeting_2020_04_16.ipynb  Meeting_2020_04_20.ipynb  README.md  README.rst  RK4_fast_V3.ipynb  Runge_Kutta_pw.ipynb  STRUPHY.py  STRUPHY_April2020.py  (+86 more)
.github/: pull_request_template.md
Thesis_Esteban/: Magnetic_Field_Evo_complete.ipynb  Stability_Analisis_Corrected_18_05.ipynb  VN_stability_corrected.ipynb
batch_samples/: batch_cobra.sh  batch_cobra_mpi.sh  batch_cobra_mpi_openmp.sh  batch_draco_mpi.sh  batch_draco_mpi_openmp.sh  initial_setup.sh
doc/: conf.py  index.rst  requirements.txt
docker/: Containerfile-buildah  almalinux-latest.dockerfile  almalinux.dockerfile  centos_7_py_3_8.dockerfile  centos_7_py_3_9.dockerfile  debian.dockerfile  fedora-latest.dockerfile  fedora.dockerfile  fedora_38.dockerfile  fedora_latest.dockerfile  mpcdf-gcc-openmpi-with-struphy.dockerfile  opensuse-latest.dockerfile  opensuse.dockerfile  struphy_ubuntu_python_3_11.dockerfile  ubuntu-latest-with-struphy.dockerfile  ubuntu-latest.dockerfile  ubuntu.dockerfile  ubuntu_20.04_py_3_8.dockerfile  ubuntu_20.04_py_3_9.dockerfile  ubuntu_20_04_py_3_8.dockerfile  ubuntu_20_04_py_3_9.dockerfile  ubuntu_23_04.dockerfile  ubuntu_latest_py_3_11.dockerfile
hylife/: interface.py  interface_analytical.py  interface_original_analytical.py
images/: debian.dockerfile  debian11.dockerfile  fedora.dockerfile  fedora36.dockerfile  struphy_ubuntu20.dockerfile  struphy_ubuntu20_test.dockerfile  ubuntu.dockerfile  ubuntu20.dockerfile
notebooks/: 1d_matrices.ipynb  derham_complex.ipynb  domains.ipynb  gvec_equil.ipynb  numerical_mhd_equils.ipynb  stability.ipynb  tutorial_01_units_run_main.ipynb  tutorial_02_postproc_standard_plotting.ipynb  tutorial_03_plot_poloidal_planes.ipynb
papers/: README.rst
results/: STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=100032_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=on_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=1024000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=14400_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=14400_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=on_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=256000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=256000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64_lin.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=4096000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=512000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=8192000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=9932800_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=9932800_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.06_Np=9932800_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=off_x_univel.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.08_Np=1e7_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-6_CV=off_x.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.08_Np=1e7_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-6_CV=off_x_sobola1000.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.08_Np=8192000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=off_x_sobola.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.12_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.12_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64_long.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.24_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.48_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=off_x_sobol_a64.txt  STRUPHY_Nel=16_p=3_L=2pidk_dt=0.48_Np=2048000_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-3_CV=on_x_sobol_a64.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=1e5_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=on_x.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=1e5_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=on_x_sobol_ref.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=1e5_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=on_y.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=1e5_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=on_z.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=4e5_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-4_CV=on_xy.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=5e6_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-5_CV=off_z.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.04_Np=5e6_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-5_CV=off_z_sobol.txt  STRUPHY_Nel=20_p=3_L=2pidk_dt=0.1_Np=5e6_vth=1.0_v0=2.5_nuh=0.05_k=0.75_amp=1e-6_CV=off_xy.txt
scripts/: example_cold_plasma_1d_fft  example_lin_Vlasov_Maxwell  example_lin_mhd_1d_fft  example_linearmhd_mpi_4  example_maxwell_1d_fft  example_maxwell_mpi_3  example_maxwell_serial  example_pproc  example_pproc_mpi_3  example_pproc_serial  example_psydac_parallel  struphy
simulation_05042020_1/: initial_conditions_MHD.py  initial_conditions_PIC.py  parameters.py
simulation_06042020_2/: equilibrium_MHD.py  initial_conditions_MHD.py
simulation_06042020_3/: equilibrium_PIC.py  (+1 more)
(+2192 files in other folders)
