[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "struphy"
version = "2.5.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Max Planck Institute for Plasma Physics" },
    { email = "stefan.possanner@ipp.mpg.de" },
    { email = "eric.sonnendruecker@ipp.mpg.de" },
]
description = "Multi-model plasma physics package"
keywords = [
    "plasma physics, fusion, numerical modeling, partial differential equations, energetic particles",
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<=2.2.6",
    "pyccel<=2.0.1, >=2.0",
    "scipy<=1.15.3",
    "h5py<=3.14.0",
    "matplotlib<=3.10.5",
    "pyyaml<=6.0.3",
    "vtk<=9.5.2",
    "tqdm<=4.67.1",
    "argcomplete<=3.6.2",
    "pytest<=8.4.2",
    "pytest-mpi<=0.6",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
phys = [
    "gvec<=1.2.0, >=1.1.0",
    "desc-opt<=0.15.0",
]
dev = [
    "notebook<=7.4.7",
    "autopep8<=2.3.2",
    "isort<=6.0.1",
    "flake8<=7.3.0",
    "pylint<=3.3.8",
    "ssort<=0.15.0",
    "add-trailing-comma<=3.2.0",
    "ruff<=0.13.2, >=0.9.1",
    "pre-commit<=4.3.0",
    "nbstripout<=0.8.1",
    "tabulate<=0.9.0",
    "tomli-w<=1.2.0",
    "kaleido<=1.1.0",
    "pandas<=2.3.3",
    "plotly<=6.3.0",
]
mpi = [
    "mpi4py<=4.1.1",
]
doc = [
    "struphy[phys]",
    "sphinx<=8.1.3",
    "sphinx-design<=0.6.1",
    "lxml_html_clean<=0.4.3",
    "sphinxcontrib-napoleon<=0.7",
    "pydata-sphinx-theme<=0.16.1",
    "nbsphinx<=0.9.7",
    "m2r2<=0.3.4",
    "myst-parser<=4.0.1",
    "mistune<=0.8.4",
    "docutils<=0.21.2",
    "ipyparallel<=9.0.2",
]
likwid = [
    "struphy[dev]",
    "pylikwid",
]
all = [
    "struphy[phys]",
    "struphy[dev]",
    "struphy[mpi]",
    "struphy[doc]",
]

[project.urls]
homepage = "https://struphy.pages.mpcdf.de/struphy/"
documentation = "https://struphy.pages.mpcdf.de/struphy/"
repository = "https://gitlab.mpcdf.mpg.de/struphy/struphy"
changelog = "https://gitlab.mpcdf.mpg.de/struphy/struphy/-/blob/devel/CHANGELOG.md"
"Bug Tracker" = "https://gitlab.mpcdf.mpg.de/struphy/struphy/-/issues"

[project.scripts]
struphy = "struphy.console.main:struphy"
kinetic-diagnostics = "struphy.diagnostics.console_diagn:main"

[tool.setuptools.package-data]
"struphy.fields_background.mhd_equil.eqdsk" = [
    "data/*.high",
]
"struphy.fields_background.mhd_equil.gvec" = [
    "run_01/*.dat",
    "run_01/*.ini",
    "run_02/*.dat",
    "run_02/*.ini",
    "run_03/*.dat",
    "run_03/*.ini",
    "run_03/*.nc",
]
"struphy.io" = [
    "batch/*.sh",
]
"struphy.io.inp" = [
    "parameters.yml",
    "tests/*.yml",
    "tutorials/*.yml",
    "longer_examples/*.yml",
    "verification/*.yml",
]
struphy = [
    "compile_struphy.mk",
    "psydac-2.5.0.dev0-py3-none-any.whl",
]

[tool.autopep8]
max_line_length = 120
ignore = [
    "E221,E226,E203,E265,E731,E711",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pylint]
max-line-length = 120
quote-style = "single"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E265",
    "E402",
    "E701",
    "E722",
    "E731",
    "E741",
    "E742",
    "E743",
    "E902",
    "F401",
    "F403",
    "F405",
    "D211",
    "D213",
]
