[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "struphy"
version = "2.5.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Max Planck Institute for Plasma Physics" },
    { email = "stefan.possanner@ipp.mpg.de" },
    { email = "eric.sonnendruecker@ipp.mpg.de" },
]
description = "Multi-model plasma physics package"
keywords = [
    "plasma physics, fusion, numerical modeling, partial differential equations, energetic particles",
]
classifiers = [
    "Programming Language :: Python :: 3",
    ]
dependencies = [
    'numpy',
    'cunumpy',
    'pyccel>=2.0',
    'psydac @ git+https://github.com/struphy-hub/psydac-for-struphy.git@devel-tiny',
    'scipy',
    'h5py',
    'matplotlib',
    'pyyaml',
    'vtk',
    'tqdm',
    'argcomplete',
    'pytest',
    'pytest-mpi',
    'pytest-testmon',
    'line_profiler',
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
phys = [
    'gvec>=1.1.0',
    'desc-opt',
]
dev = [
    "struphy[mpi]",
    "notebook",
    "autopep8",
    "isort",
    "flake8",
    "pylint",
    "ssort",
    "add-trailing-comma",
    "ruff>=0.9.1",
    "pre-commit",
    "nbstripout",
    "tabulate",
    "tomli-w",
    "kaleido",
    "pandas",
    "plotly",
]
doc = [
    "struphy[phys]",
    "jupyter",
    "nbconvert",
    "ipykernel",
    "sphinx",
    "sphinx-design",
    "lxml_html_clean",
    "sphinxcontrib-napoleon",
    "pydata-sphinx-theme",
    "nbsphinx",
    "m2r2",
    "myst-parser",
    "mistune",
    "docutils",
    "ipyparallel",
]
likwid = [
    "struphy[dev]",
    "pylikwid",
]
all = [
    "struphy[phys]",
    "struphy[dev]",
    "struphy[mpi]",
    "struphy[doc]",
    "struphy[likwid]",
]

[project.urls]
homepage = "https://struphy.pages.mpcdf.de/struphy/"
documentation = "https://struphy.pages.mpcdf.de/struphy/"
repository = "https://gitlab.mpcdf.mpg.de/struphy/struphy"
changelog = "https://gitlab.mpcdf.mpg.de/struphy/struphy/-/blob/devel/CHANGELOG.md"
"Bug Tracker" = "https://gitlab.mpcdf.mpg.de/struphy/struphy/-/issues"

[project.scripts]
struphy = "struphy.console.main:struphy"
kinetic-diagnostics = "struphy.diagnostics.console_diagn:main"

[tool.setuptools.package-data]
"struphy.fields_background.mhd_equil.eqdsk" = [
    "data/*.high",
]
"struphy.fields_background.mhd_equil.gvec" = [
    "run_01/*.dat",
    "run_01/*.ini",
    "run_02/*.dat",
    "run_02/*.ini",
    "run_03/*.dat",
    "run_03/*.ini",
    "run_03/*.nc",
]
"struphy.io" = [
    "batch/*.sh",
]
"struphy.io.inp" = [
    "parameters.yml",
    "tests/*.yml",
    "tutorials/*.yml",
    "longer_examples/*.yml",
    "verification/*.yml",
]
struphy = [
    "compile_struphy.mk",
    "psydac-2.5.0.dev0-py3-none-any.whl",
]

[tool.autopep8]
max_line_length = 120
ignore = [
    "E221,E226,E203,E265,E731,E711",
]

[tool.isort]
profile = "black"
line_length = 120
# multi_line_output = 3
# include_trailing_comma = true
# force_grid_wrap = 0
# combine_as_imports = true

[tool.pylint]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E265",
    "E402",
    "E701",
    "E722",
    "E731",
    "E741",
    "E742",
    "E743",
    "E902",
    "F401",
    "F403",
    "F405",
    "D211",
    "D213",
]

[tool.pytest.ini_options]
markers = [
    "models",
    "toy",
    "fluid",
    "kinetic",
    "hybrid",
    "single",
]
